--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>爬爬虾&#10084;&#65039;</title>
+    <title>爬爬&#10084;&#65039;</title>
   <style type="text/css">
     html, body {
       height: 100%;
